Use Deque instead of list